@@ -19,9 +19,8 @@ package org.apache.kafka.common.security.scram;
 import java.util.Collection;
 import java.util.Properties;
 
-import javax.xml.bind.DatatypeConverter;
-
 import org.apache.kafka.common.security.authenticator.CredentialCache;
+import org.apache.kafka.common.utils.Base64;
 
 /**
  * SCRAM Credential persistence utility functions. Implements format conversion used
@@ -32,20 +31,22 @@ import org.apache.kafka.common.security.authenticator.CredentialCache;
  * </pre>
  *
  */
-public class ScramCredentialUtils {
+public final class ScramCredentialUtils {
     private static final String SALT = "salt";
     private static final String STORED_KEY = "stored_key";
     private static final String SERVER_KEY = "server_key";
     private static final String ITERATIONS = "iterations";
 
+    private ScramCredentialUtils() {}
+
     public static String credentialToString(ScramCredential credential) {
         return String.format("%s=%s,%s=%s,%s=%s,%s=%d",
                SALT,
-               DatatypeConverter.printBase64Binary(credential.salt()),
+               Base64.encoder().encodeToString(credential.salt()),
                STORED_KEY,
-               DatatypeConverter.printBase64Binary(credential.storedKey()),
+                Base64.encoder().encodeToString(credential.storedKey()),
                SERVER_KEY,
-               DatatypeConverter.printBase64Binary(credential.serverKey()),
+                Base64.encoder().encodeToString(credential.serverKey()),
                ITERATIONS,
                credential.iterations());
     }
@@ -56,9 +57,9 @@ public class ScramCredentialUtils {
                 !props.containsKey(SERVER_KEY) || !props.containsKey(ITERATIONS)) {
             throw new IllegalArgumentException("Credentials not valid: " + str);
         }
-        byte[] salt = DatatypeConverter.parseBase64Binary(props.getProperty(SALT));
-        byte[] storedKey = DatatypeConverter.parseBase64Binary(props.getProperty(STORED_KEY));
-        byte[] serverKey = DatatypeConverter.parseBase64Binary(props.getProperty(SERVER_KEY));
+        byte[] salt = Base64.decoder().decode(props.getProperty(SALT));
+        byte[] storedKey = Base64.decoder().decode(props.getProperty(STORED_KEY));
+        byte[] serverKey = Base64.decoder().decode(props.getProperty(SERVER_KEY));
         int iterations = Integer.parseInt(props.getProperty(ITERATIONS));
         return new ScramCredential(salt, storedKey, serverKey, iterations);
     }
@@ -75,9 +76,9 @@ public class ScramCredentialUtils {
         return props;
     }
 
-    public static void createCache(CredentialCache cache, Collection<String> enabledMechanisms) {
+    public static void createCache(CredentialCache cache, Collection<String> mechanisms) {
         for (String mechanism : ScramMechanism.mechanismNames()) {
-            if (enabledMechanisms.contains(mechanism))
+            if (mechanisms.contains(mechanism))
                 cache.createCache(mechanism, ScramCredential.class);
         }
     }
